[package]
name = "merlin"
# Before incrementing:
# - update CHANGELOG
# - update html_root_url
# - update README if required by semver
version = "3.0.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/zkcrypto/merlin"
homepage = "https://docs.rs/merlin"
documentation = "https://docs.rs/merlin"
categories = ["cryptography"]
keywords = ["cryptography", "zero-knowledge", "fiat-shamir", "transcript"]
description = "Composable proof transcripts for public-coin arguments of knowledge"
exclude = [".travis.yml", ".gitignore"]

[package.metadata.docs.rs]
# We need nightly to build docs
features = ["nightly"]

[dependencies]
keccak = { version = "0.1", default-features = false }
byteorder = { version = "1.2", default-features = false }
zeroize = { version = "1", default-features = false, features = ["zeroize_derive"] }
rand_core = { version = "0.6", default-features = false }
hex = { version = "0.3", default-features = false, optional = true }
strobe-rs = "0.10"

[dev-dependencies]
strobe-rs = "0.10"
curve25519-dalek = { git = "https://github.com/xelis-project/curve25519-dalek", features = ["rand_core"], tag = "v4.2.0" }
rand_chacha = "0.3"

[features]
default = ["std"]
nightly = []
debug-transcript = ["hex"]
std = ["rand_core/std", "byteorder/std"]
